--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:layout_editor_absoluteX="-16dp"
+        tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -22,11 +22,26 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="0dp"
         android:layout_marginEnd="0dp"
+        android:background="@drawable/design_menu"
+
+        app:itemRippleColor="@color/menu_back"
+        app:itemActiveIndicatorStyle="@android:color/transparent"
+        app:itemTextColor="@color/black"
+        app:itemIconSize="90dp"
+
+        app:itemPaddingBottom="7dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:itemBackground="@color/white"
-        app:itemTextColor="@color/black"
-        app:itemIconSize="65dp"
         app:menu="@menu/menu_bottom"/>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/design_menu2"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintStart_toStartOf="@+id/container"
+        app:layout_constraintTop_toTopOf="@+id/bottom_menu"
+        app:layout_constraintTop_toBottomOf="@id/bottom_menu"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
