--- a/app/src/main/res/drawable/pn_randwords_btn.xml
+++ b/app/src/main/res/drawable/pn_randwords_btn.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:topLeftRadius="15dp"
-        android:topRightRadius="15dp"
-        android:bottomLeftRadius="0dp"
-        android:bottomRightRadius="0dp"
+        android:topLeftRadius="100dp"
+        android:topRightRadius="25dp"
+        android:bottomLeftRadius="100dp"
+        android:bottomRightRadius="25dp"
         />
     <solid
-        android:color="#FFFFFF"
+        android:color="#FFCC4D"
         />
     <padding
         android:left="0dp"
