--- a/app/src/main/res/layout/fragment_pronounce.xml
+++ b/app/src/main/res/layout/fragment_pronounce.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PronounceFragment">
-
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -23,16 +22,25 @@
         android:layout_height="490dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
         <TextView
             android:id="@+id/response_code"
+            android:textAlignment="center"
+            android:textSize="32sp"
+            android:hint="마이크 버튼을 눌러 분석"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/response_body"
+            android:id="@+id/SaidWord"
+            android:textAlignment="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/WordScore"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatEditText
