--- a/app/src/main/res/layout/fragment_pronounce.xml
+++ b/app/src/main/res/layout/fragment_pronounce.xml
@@ -23,23 +23,43 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/response_code"
-            android:textAlignment="center"
-            android:textSize="32sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="마이크 버튼을 눌러 분석"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:id="@+id/SaidWord"
             android:textAlignment="center"
+            android:textSize="24sp" />
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/SaidWord"
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/tts_btn"
+                android:background="@drawable/pn_tts_btn"
+                android:layout_margin="5dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"/>
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/WordScore"
-            android:textAlignment="center"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center" />
+
+        <ImageView
+            android:id="@+id/result_img"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
