--- a/app/src/main/res/layout/fragment_pronounce.xml
+++ b/app/src/main/res/layout/fragment_pronounce.xml
@@ -23,7 +23,6 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:orientation="vertical">
-
         <TextView
             android:id="@+id/response_code"
             android:layout_width="match_parent"
@@ -32,35 +31,28 @@
             android:textAlignment="center"
             android:textSize="24sp" />
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/SaidWord"
-
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="24sp"/>
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/tts_btn"
                 android:background="@drawable/pn_tts_btn"
-                android:layout_margin="5dp"
+                android:layout_margin="10dp"
                 android:layout_width="30dp"
                 android:layout_height="30dp"/>
         </LinearLayout>
 
-
         <TextView
             android:id="@+id/WordScore"
+            android:textSize="20sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center" />
-
-        <ImageView
-            android:id="@+id/result_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatEditText
