--- a/app/src/main/res/layout/fragment_my_words.xml
+++ b/app/src/main/res/layout/fragment_my_words.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyWordsFragment">
+    tools:context=".MyWordFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
