--- a/app/src/main/res/layout/fragment_pronounce.xml
+++ b/app/src/main/res/layout/fragment_pronounce.xml
@@ -4,115 +4,119 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PronounceFragment">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_margin="30dp"
-        android:text="발음 연습하기"
-        android:textSize="32sp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="490dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
-            android:id="@+id/response_code"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="마이크 버튼을 눌러 분석"
             android:textAlignment="center"
-            android:textSize="24sp" />
+            android:layout_margin="30dp"
+            android:text="발음 연습하기"
+            android:textSize="32sp"/>
+
         <LinearLayout
-            android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="400dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:orientation="vertical">
+
             <TextView
-                android:id="@+id/SaidWord"
-                android:layout_width="wrap_content"
+                android:id="@+id/response_code"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"/>
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/tts_btn"
-                android:background="@drawable/pn_tts_btn"
-                android:layout_margin="10dp"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
+                android:hint="마이크 버튼을 눌러 분석"
+                android:textAlignment="center"
+                android:textSize="24sp" />
+
+            <LinearLayout
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/SaidWord"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="24sp"/>
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/tts_btn"
+                    android:background="@drawable/pn_tts_btn"
+                    android:layout_margin="10dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/WordScore"
+                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center" />
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
         </LinearLayout>
-        <TextView
-            android:id="@+id/Word_detail1"
-            android:textSize="20sp"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/play_record"
+            android:text="내 말하기 다시 듣기"
+            android:layout_marginHorizontal="30dp"
+            android:layout_marginVertical="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center" />
-        <TextView
-            android:id="@+id/Word_detail2"
-            android:textSize="20sp"
+            android:background="@drawable/pn_play_record_btn"/>
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/setScript"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:singleLine="true"
+            android:elevation="3dp"
+            android:hint="단어를 입력 및 가져오기"
+            android:paddingStart="20dp"
+            android:background="@drawable/pn_word_text_box"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center" />
-        <TextView
-            android:id="@+id/WordScore"
-            android:textSize="20sp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textAlignment="center" />
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
+            android:orientation="horizontal">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/SetWord_btn"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".50"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_gravity="center"
+                android:background="@drawable/pn_randwords_btn"
+                android:text="랜덤 단어\n가져오기" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/eval_btn"
+                android:layout_width="100dp"
+                android:elevation="10dp"
+                android:layout_height="100dp"
+                android:layout_margin="10dp"
+                android:layout_gravity="center"
+                android:background="@drawable/pn_mic_btn" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/RandWord_btn"
+                android:text="내 단어\n말하기"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".50"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/pn_mywords_btn"
+                android:layout_gravity="center"/>
+        </LinearLayout>
     </LinearLayout>
-
-    <androidx.appcompat.widget.AppCompatEditText
-        android:id="@+id/setScript"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:singleLine="true"
-        android:elevation="3dp"
-        android:hint="단어를 입력 및 가져오기"
-        android:paddingStart="20dp"
-        android:background="@drawable/pn_word_text_box"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="30dp"
-        android:layout_marginLeft="30dp"
-        android:orientation="horizontal">
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/SetWord_btn"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".50"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_gravity="center"
-            android:background="@drawable/pn_randwords_btn"
-            android:text="랜덤 단어\n가져오기" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/eval_btn"
-            android:layout_width="100dp"
-            android:elevation="10dp"
-            android:layout_height="100dp"
-            android:layout_margin="10dp"
-            android:layout_gravity="center"
-            android:background="@drawable/pn_mic_btn" />
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/RandWord_btn"
-            android:text="내 단어\n말하기"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".50"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/pn_mywords_btn"
-            android:layout_gravity="center"/>
-    </LinearLayout>
-</LinearLayout>
 </FrameLayout>
