--- a/app/src/main/res/layout/fragment_pronounce.xml
+++ b/app/src/main/res/layout/fragment_pronounce.xml
@@ -18,6 +18,7 @@
             android:textSize="32sp"/>
 
         <LinearLayout
+            android:gravity="center|top"
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_marginLeft="30dp"
@@ -49,21 +50,21 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"/>
             </LinearLayout>
+            <ImageView
+                android:id="@+id/score_star"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
             <TextView
                 android:id="@+id/WordScore"
                 android:textSize="20sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAlignment="center" />
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
         </LinearLayout>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/play_record"
             android:text="내 말하기 다시 듣기"
-            android:layout_marginHorizontal="30dp"
+            android:layout_marginHorizontal="50dp"
             android:layout_marginVertical="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
